--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
 
         <script type="text/javascript" src="/js/vendor/jquery-1.12.0.min.js"></script>
         <script type="text/javascript" src="/js/plugins.js"></script>
-        <script type="text/javascript" src="/js/main.js"></script>
+        <script type="text/javascript" src="/netention.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <!-- 
+        <!--
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
